--- a/packages/octocrypt/public/style.css
+++ b/packages/octocrypt/public/style.css
@@ -1,6 +1,21 @@
 body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; }
 .form-container { background: #f5f5f5; padding: 20px; border-radius: 8px; margin-bottom: 20px; }
 .key-block { background: #f9f9f9; padding: 15px; margin: 10px 0; border-left: 4px solid #007cba; }
+.key-block.expired { border-left: 4px solid red; }
+.expired-link-disabled {   pointer-events: none; cursor: default; color: grey; }
+.expired-link-disabled::after {
+  content: "this key is expired";
+  top: -30px;
+  right: 0;
+  left: 0;
+  display: none;
+  text-align: center;
+  background-color: rgb(87, 87, 40);
+  color: #fff;
+  border-radius: 4px;
+  padding: 2px;
+  display: block;
+}
 .key-content { background: #333; color: #fff; padding: 10px; border-radius: 4px; overflow-x: auto; word-wrap: break-word; white-space: pre-wrap; max-height: 20em; }
 .encrypted { font-family: monospace; background: #666; color: #fff; padding: 10px; border-radius: 4px; overflow-x: auto; word-wrap: break-word; white-space: pre-wrap; }
 input[type=text] { padding: 8px; font-size: 16px; width: 200px; }
